--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -7,16 +7,18 @@
     tools:context="com.example.machado.myapplication1.Main7Activity">
 
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="377dp"
-        android:layout_height="508dp"
+    <ListView
+        android:id="@+id/listclass"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.923" />
 </android.support.constraint.ConstraintLayout>
